FIxed styling bugs on mobile and tablet size

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,7 +1,7 @@
 html {
   margin: 0;
   background-image: url('possibleWeddingBackground.jpg');
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-color: black;
@@ -17,7 +17,7 @@ html {
   font-size: 300%;
   font-family: 'Great Vibes', cursive;
   margin-bottom: 0;
-  margin-top: 4%;
+  margin-top: 6%;
 }
 
 .date {
@@ -35,7 +35,7 @@ html {
 }
 
 .topNav {
-  font-size: 150%;
+  font-size: 180%;
   font-family: 'Abel', sans-serif;
   margin-top: 0;
   margin-right: 4%;
@@ -71,12 +71,13 @@ html {
 .invite {
   border: 2px solid #A9DDED;
   background-image: url('mobileInvite.png');
-  background-size: cover;
+  background-size: 100% 55vh;
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 62vh;
+  height: 55vh;
   border-radius: 10%;
+  margin-top: 4%;
 }
 
 .registry {
@@ -124,7 +125,7 @@ html {
   background-color: black;
   background-position: center;
   width: 70%;
-  margin-top: 6%;
+  margin-top: 4%;
   margin-left: 15%;
   display: flex;
   flex-direction: column;
@@ -143,7 +144,7 @@ html {
   flex-direction: column;
   justify-content: center;
   font-family: 'Abel', sans-serif;
-  font-size: 120%;
+  font-size: 100%;
 }
 
 .rsvpInput {
@@ -269,35 +270,41 @@ label {
   html {
     margin: 0;
     background-image: url('possibleWeddingBackground.jpg');
+    background-position: bottom;
     background-size: cover;
-    background-position: top;
+    height: 100%;
+    background-color: white;
   }
   .header-title {
-    font-size: 400%;
+    font-size: 500%;
     margin-bottom: 0;
     margin-top: 2%;
   }
+  .date {
+    font-size: 300%;
+  }
   .topNav {
-    font-size: 100%;
+    font-size: 200%;
   }
   .home {
     margin-top: 37%;
   }
   .invite {
     background-image: url('WeddingInvite.png');
-    background-size: 50vw 67vh;
+    background-size: 75vw 67vh;
     background-repeat: no-repeat;
-    width: 50vw;
+    width: 75vw;
     height: 67vh;
-    margin-left: 25%;
+    margin-left: 10%;
     margin-top: 1.5%;
   }
   .registry {
     background-image: url('possibleWeddingBackground.jpg');
     background-size: cover;
-    width: 54vw;
+    background-position: center;
+    width: 75vw;
     height: 67vh;
-    margin-left: 25%;
+    margin-left: 10%;
     margin-top: 1.5%;
   }
   .registryHead {
@@ -307,156 +314,86 @@ label {
     width: 25%;
     margin-left: 4%;
     margin-top: 0;
-    margin-bottom: 5%;
+    margin-bottom: 8%;
   }
   .amazonImg {
-    width: 25%;
-    margin-left: 42%;
+    width: 30%;
+    margin-left: 38%;
     margin-bottom: 8%;
     margin-top: 0;
   }
   .rei {
-    width: 20%;
-    margin-left: 43%;
-    margin-bottom: 6%;
+    width: 25%;
+    margin-left: 30%;
+    margin-bottom: 8%;
   }
   .zola {
-    width: 25%;
+    width: 30%;
     margin-left: 6%;
+    margin-top: 45%;
+  }
+  .rsvp {
+    background-image: url('possibleWeddingBackground.jpg');
+    background-size: cover;
+    width: 75vw;
+    height: 67vh;
+    margin-left: 10%;
+    margin-top: 1.5%;
+  }
+  .rsvpHead {
+    margin-top: 4%;
+    margin-bottom: 8%;
+    font-size: 260%;
+  }
+  .rsvpForm {
+    font-size: 230%;
+  }
+  .rsvpInput {
+    width: 70%;
+    text-align: center;
+    padding: 4%;
+    font-size: 2vh;
+    margin-bottom: 2%;
+    background-color: #E5E5E5;
+    margin-left: 12%;
+  }
+  .childNumber {
+    margin-right: 10.5%;
+  }
+  .attending {
+    display: flex;
+    flex-direction: row;
+  }
+  button {
+    margin-top: 2%;
+    width: 40%;
+    font-size: 80%;
+    padding: 2%;
+    background-color: #A9DDED;
+    color: black;
+    border: 2px solid #EDDAFA;
+    margin-left: 30%;
+  }
+  .guests {
+    background-color: black;
+    width: 50vw;
+    height: 67vh;
+    border: 2px solid #A9DDED;
+    border-radius: 10%;
+    margin-bottom: .5%;
+  }
+  .guestsHead {
+    color: white;
+    text-align: center;
+  }
+  .home {
+    margin-top: 100%;
   }
 }
 
-/*
-
-.rsvp {
-  border: 2px solid #A9DDED;
-  background-image: url('possibleWeddingBackground.jpg');
-  background-size: cover;
-  width: 50vw;
-  height: 67vh;
-  margin-left: 25%;
-  margin-top: 3%;
-  border-radius: 10%;
+@media only screen and (min-width: 1200px) {
+  html {
+    background-color: red;
+    background-image: none;
+  }
 }
-
-.rsvpHead {
-  text-align: center;
-  font-family: 'Abel', sans-serif;
-  font-size: 4vh;
-  color: #E5E5E5;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  margin-top: 2%;
-}
-
-.rsvpForm {
-  display: flex;
-  flex-direction: column;
-  font-family: 'Abel', sans-serif;
-  font-size: 4vh;
-}
-
-.rsvpInput {
-  width: 70%;
-  text-align: center;
-  padding: 2%;
-  font-size: 2vh;
-  margin-bottom: 2%;
-  background-color: #E5E5E5;
-  margin-left: 15%;
-  border: 2px solid #EDDAFA;
-}
-
-.childNumber {
-  margin-right: 10.5%;
-}
-
-.attending {
-  display: flex;
-  flex-direction: row;
-}
-
-button {
-  margin-top: 2%;
-  width: 30%;
-  font-size: 80%;
-  padding: 1%;
-  background-color: #A9DDED;
-  color: black;
-  border: 2px solid #EDDAFA;
-  margin-left: 35%;
-}
-
-label {
-  color: #E5E5E5;
-  font-weight: bold;
-  margin-left: 15%;
-  margin-bottom: 0;
-}
-
-.invite {
-  color: white;
-}
-
-
-.guests {
-  background-color: black;
-  width: 50vw;
-  height: 67vh;
-  border: 2px solid #A9DDED;
-  border-radius: 10%;
-  margin-bottom: .5%;
-}
-
-.guestsHead {
-  color: white;
-  text-align: center;
-}
-
-
-.cbImage {
-  width: 25%;
-  margin-left: 4%;
-  margin-top: 0;
-  margin-bottom: 5%;
-}
-
-
-
-.app-header {
-  text-align: center;
-  height: 150px;
-  padding: 0;
-  color: #EDDAFA;
-}
-
-.header-title {
-  font-size: 10vh;
-  font-family: 'Great Vibes', cursive;
-  margin-bottom: 0;
-  margin-top: 1.5%;
-}
-
-.date {
-  font-size: 5vh;
-  font-family: 'Sacramento', cursive;
-  margin-top: 0;
-  margin-bottom: 4%;
-}
-
-.nav {
-  margin: 0;
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.topNav {
-  font-size: 2vh;
-  font-family: 'Abel', sans-serif;
-  margin-top: 0;
-  margin-right: 4%;
-  margin-left: 4%;
-  text-decoration: underline;
-  color: #E5E5E5;
-} */
